fixed bigfoot footnote content spacing and postheader title colors
Former-commit-id: 9912883eb378486042697dc503da1a2aefbd5e63 [formerly 80067d623070cd2849de6e3cb5d384782faffb0e] [formerly 77a20f9c0dc1917f2611ddfc169dc32a407c95f0 [formerly 20ab805e6eac12b063cec31a64c7b92041f1a1b0]]
Former-commit-id: f8190b5508bf308ccd9decb8a1e57d0664fd4aae [formerly 3ec09174899cecb5daeb9711db3fd5154fa95d1c]
Former-commit-id: bdcb24f61daf0e5a4ef6b70d9b3ed9cd2bf852ae

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -293,7 +293,14 @@ blockquote {
 }
 
 .homepage .postHeader h1 {
-    font-size: 1.9em;
+    font-size: 1.7em;
+    font-weight: 800;
+    line-height: 1;
+    margin-bottom: .2em;
+}
+
+.homepage .postHeader h1 {
+    font-size: 1.6em;
     font-weight: 800;
     line-height: 1;
     margin-bottom: .2em;
@@ -361,6 +368,8 @@ body pre {
     text-align: center;
     margin-bottom: 2.5em;
     margin-top: 5em;
+    color: #545454;
+    line-height: 1.5; 
 }
 
 .post .postHeader h1 {
@@ -368,7 +377,8 @@ body pre {
     margin-bottom: 0em;
     font-size: 2em;
     text-decoration: none;
-    color: #545454;
+    line-height: 1.5;
+    color: #545454; 
 }
 
 a.linked,
@@ -451,7 +461,8 @@ section.footnotes {
 }
 
 .post .postHeader h1 a:visited {
-   color: black;
+    color: #545454;
+    line-height: 1.5;
 }
 
 .homepage .article hr {
